Logs/AssetImportWorker0.log
Unity Editor version:    2021.3.10f1 (1c7d0df0160b)
Branch:                  2021.3/staging
Build type:              Release
Batch mode:              YES
macOS version:           Version 13.0 (Build 22A380)
Darwin version:          22.1.0
Architecture:            arm64
Running under Rosetta:   NO
Available memory:        16384 MB
Using pre-set license
Pro License: YES

COMMAND LINE ARGUMENTS:
/Applications/Unity/Hub/Editor/2021.3.10f1/Unity.app/Contents/MacOS/Unity
-adb2
-batchMode
-noUpm
-name
AssetImportWorker0
-projectPath
/Users/stevenaragonurrea/Workspace/DaVinci/Thesis
-logFile
Logs/AssetImportWorker0.log
-srvPort
62068
Successfully changed project path to: /Users/stevenaragonurrea/Workspace/DaVinci/Thesis
/Users/stevenaragonurrea/Workspace/DaVinci/Thesis
[UnityMemory] Configuration Parameters - Can be set up in boot.config
    "memorysetup-bucket-allocator-granularity=16"
    "memorysetup-bucket-allocator-bucket-count=8"
    "memorysetup-bucket-allocator-block-size=33554432"
    "memorysetup-bucket-allocator-block-count=8"
    "memorysetup-main-allocator-block-size=16777216"
    "memorysetup-thread-allocator-block-size=16777216"
    "memorysetup-gfx-main-allocator-block-size=16777216"
    "memorysetup-gfx-thread-allocator-block-size=16777216"
    "memorysetup-cache-allocator-block-size=4194304"
    "memorysetup-typetree-allocator-block-size=2097152"
    "memorysetup-profiler-bucket-allocator-granularity=16"
    "memorysetup-profiler-bucket-allocator-bucket-count=8"
    "memorysetup-profiler-bucket-allocator-block-size=33554432"
    "memorysetup-profiler-bucket-allocator-block-count=8"
    "memorysetup-profiler-allocator-block-size=16777216"
    "memorysetup-profiler-editor-allocator-block-size=1048576"
    "memorysetup-temp-allocator-size-main=16777216"
    "memorysetup-job-temp-allocator-block-size=2097152"
    "memorysetup-job-temp-allocator-block-size-background=1048576"
    "memorysetup-job-temp-allocator-reduction-small-platforms=262144"
    "memorysetup-temp-allocator-size-background-worker=32768"
    "memorysetup-temp-allocator-size-job-worker=262144"
    "memorysetup-temp-allocator-size-preload-manager=33554432"
    "memorysetup-temp-allocator-size-nav-mesh-worker=65536"
    "memorysetup-temp-allocator-size-audio-worker=65536"
    "memorysetup-temp-allocator-size-cloud-worker=32768"
    "memorysetup-temp-allocator-size-gi-baking-worker=262144"
    "memorysetup-temp-allocator-size-gfx=262144"
Refreshing native plugins compatible for Editor in 124.70 ms, found 1 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Initialize engine version: 2021.3.10f1 (1c7d0df0160b)
[Subsystems] Discovering subsystems at path /Applications/Unity/Hub/Editor/2021.3.10f1/Unity.app/Contents/Resources/UnitySubsystems
[Subsystems] Discovering subsystems at path /Users/stevenaragonurrea/Workspace/DaVinci/Thesis/Assets
GfxDevice: creating device client; threaded=0; jobified=0
 preferred device: Apple M1 Pro (high power)
Metal devices available: 1
0: Apple M1 Pro (high power)
Using device Apple M1 Pro (high power)
Initializing Metal device caps: Apple M1 Pro
Initialize mono
Mono path[0] = '/Applications/Unity/Hub/Editor/2021.3.10f1/Unity.app/Contents/Managed'
Mono path[1] = '/Applications/Unity/Hub/Editor/2021.3.10f1/Unity.app/Contents/MonoBleedingEdge/lib/mono/unityjit-macos'
Mono config path = '/Applications/Unity/Hub/Editor/2021.3.10f1/Unity.app/Contents/MonoBleedingEdge/etc'
Using monoOptions --debugger-agent=transport=dt_socket,embedding=1,server=y,suspend=n,address=127.0.0.1:56324
Begin MonoManager ReloadAssembly
Registering precompiled unity dll's ...
Register platform support module: /Applications/Unity/Hub/Editor/2021.3.10f1/Unity.app/Contents/PlaybackEngines/MacStandaloneSupport/UnityEditor.OSXStandalone.Extensions.dll
Registered in 0.001481 seconds.
Native extension for OSXStandalone target not found
Refreshing native plugins compatible for Editor in 78.34 ms, found 1 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Mono: successfully reloaded assembly
- Completed reload, in  0.495 seconds
Domain Reload Profiling:
	ReloadAssembly (495ms)
		BeginReloadAssembly (73ms)
			ExecutionOrderSort (0ms)
			DisableScriptedObjects (0ms)
			BackupInstance (0ms)
			ReleaseScriptingObjects (0ms)
			CreateAndSetChildDomain (0ms)
		EndReloadAssembly (344ms)
			LoadAssemblies (72ms)
			RebuildTransferFunctionScriptingTraits (0ms)
			SetupTypeCache (74ms)
			ReleaseScriptCaches (0ms)
			RebuildScriptCaches (18ms)
			SetupLoadedEditorAssemblies (221ms)
				LogAssemblyErrors (0ms)
				InitializePlatformSupportModulesInManaged (3ms)
				SetLoadedEditorAssemblies (0ms)
				RefreshPlugins (78ms)
				BeforeProcessingInitializeOnLoad (1ms)
				ProcessInitializeOnLoadAttributes (114ms)
				ProcessInitializeOnLoadMethodAttributes (24ms)
				AfterProcessingInitializeOnLoad (0ms)
				EditorAssembliesLoaded (0ms)
			ExecutionOrderSort2 (0ms)
			AwakeInstancesAfterBackupRestoration (0ms)
Platform modules already initialized, skipping
Registering precompiled user dll's ...
Registered in 0.001009 seconds.
Begin MonoManager ReloadAssembly
Native extension for OSXStandalone target not found
Refreshing native plugins compatible for Editor in 0.75 ms, found 1 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Package Manager log level set to [2]
Mono: successfully reloaded assembly
- Completed reload, in  1.980 seconds
Domain Reload Profiling:
	ReloadAssembly (1980ms)
		BeginReloadAssembly (57ms)
			ExecutionOrderSort (0ms)
			DisableScriptedObjects (3ms)
			BackupInstance (0ms)
			ReleaseScriptingObjects (0ms)
			CreateAndSetChildDomain (15ms)
		EndReloadAssembly (1867ms)
			LoadAssemblies (58ms)
			RebuildTransferFunctionScriptingTraits (0ms)
			SetupTypeCache (144ms)
			ReleaseScriptCaches (1ms)
			RebuildScriptCaches (57ms)
			SetupLoadedEditorAssemblies (1579ms)
				LogAssemblyErrors (0ms)
				InitializePlatformSupportModulesInManaged (5ms)
				SetLoadedEditorAssemblies (0ms)
				RefreshPlugins (1ms)
				BeforeProcessingInitializeOnLoad (48ms)
				ProcessInitializeOnLoadAttributes (1452ms)
				ProcessInitializeOnLoadMethodAttributes (71ms)
				AfterProcessingInitializeOnLoad (1ms)
				EditorAssembliesLoaded (0ms)
			ExecutionOrderSort2 (0ms)
			AwakeInstancesAfterBackupRestoration (2ms)
Platform modules already initialized, skipping
========================================================================
Worker process is ready to serve import requests
Launching external process: /Applications/Unity/Hub/Editor/2021.3.10f1/Unity.app/Contents/Tools/UnityShaderCompiler
Launched and connected shader compiler UnityShaderCompiler after 0.11 seconds
program_source:17:38: error: use of undeclared identifier 'input'
    output.SV_Target0 = float4(uint4(input.SV_PrimitiveID0));
                                     ^



#include <metal_stdlib>
#include <metal_texture>
using namespace metal;
#ifndef XLT_REMAP_O
	#define XLT_REMAP_O {0, 1, 2, 3, 4, 5, 6, 7}
#endif
constexpr constant uint xlt_remap_o[] = XLT_REMAP_O;
struct Mtl_FragmentOut
{
    float4 SV_Target0 [[ color(xlt_remap_o[0]) ]];
};
fragment Mtl_FragmentOut xlatMtlMain(
)
{
    Mtl_FragmentOut output;
    output.SV_Target0 = float4(uint4(input.SV_PrimitiveID0));
    return output;
}
Refreshing native plugins compatible for Editor in 0.75 ms, found 1 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Unloading 3906 Unused Serialized files (Serialized files now loaded: 0)
Unloading 63 unused Assets / (1.8 MB). Loaded Objects now: 4366.
Memory consumption went from 223.5 MB to 221.8 MB.
Total: 6.336917 ms (FindLiveObjects: 0.149583 ms CreateObjectMapping: 0.049250 ms MarkObjects: 5.440792 ms  DeleteObjects: 0.696334 ms)

AssetImportParameters requested are different than current active one (requested -> active):
  custom:video-decoder-ogg-theora: a1e56fd34408186e4bbccfd4996cb3dc -> 
  custom:container-muxer-webm: aa71ff27fc2769a1b78a27578f13a17b -> 
  custom:container-demuxer-webm: 4f35f7cbe854078d1ac9338744f61a02 -> 
  custom:video-encoder-webm-vp8: eb34c28f22e8b96e1ab97ce403110664 -> 
  custom:framework-osx-AVFoundation: e770b220cccbd017edd2c1fefb359320 -> 
  custom:audio-encoder-webm-vorbis: bf7c407c2cedff20999df2af8eb42d56 -> 
  custom:container-demuxer-ogg: 62fdf1f143b41e24485cea50d1cbac27 -> 
  custom:video-decoder-webm-vp8: 9c59270c3fd7afecdb556c50c9e8de78 -> 
  custom:audio-decoder-ogg-vorbis: bf7c407c2cedff20999df2af8eb42d56 -> 
========================================================================
Received Import Request.
  Time since last request: 36641.282354 seconds.
  path: Assets/MyContent/ScriptableObjects/Tutorials/TutorialConfig04.asset
  artifactKey: Guid(ea9b55daeac6241c393a6e957af3b810) Importer(815301076,1909f56bfc062723c751e8b465ee728b)
Start importing Assets/MyContent/ScriptableObjects/Tutorials/TutorialConfig04.asset using Guid(ea9b55daeac6241c393a6e957af3b810) Importer(815301076,1909f56bfc062723c751e8b465ee728b)  -> (artifact id: 'f2a6c4037cf4a97fb737f3ed0bf63c91') in 0.071736 seconds 
========================================================================
Received Import Request.
  Time since last request: 221.441705 seconds.
  path: Assets/MyContent/ScriptableObjects/Tutorials/TutorialConfig04.asset
  artifactKey: Guid(ea9b55daeac6241c393a6e957af3b810) Importer(815301076,1909f56bfc062723c751e8b465ee728b)
Start importing Assets/MyContent/ScriptableObjects/Tutorials/TutorialConfig04.asset using Guid(ea9b55daeac6241c393a6e957af3b810) Importer(815301076,1909f56bfc062723c751e8b465ee728b)  -> (artifact id: 'f20aed1aaf4cc62ca40fed417d0b0f4a') in 0.006844 seconds 
